update: overwrite Projects page and fix assets folder structure

--- a/index.html
+++ b/index.html
@@ -29,32 +29,19 @@
         to upskill myself in the front End Development world.
       </p>
       <p class="HeroIntro">
-        This journey has been challenging, especially coming in with no background in 
-        JavaScript. HTML and CSS felt like brushing up on my skills, but JavaScript was 
-        like learning a whole new language filled with many obstacles. Over the last three 
-        months, I’ve learned a lot, and while I still have far to go, looking at my 
-        progress makes me proud. Working on this daily and applying it to my current 
-        role, such as when building Cloud Pages and understanding what JavaScript is 
-        instructing, has been a big step forward.
+Over the last three months, I’ve learned a lot, and while I still have far to go, looking at my 
+progress makes me proud. Working on this daily and applying it to my current 
+role.
       </p>
           <!-- cta-buttons Class -->
       <div class="cta">
         <a href="projects.html" class="btn">View Projects</a>
         <a href="about.html" class="btn">About Me</a>
+        <a href="contact.html" class="btn">Contact Me</a>
       </div>
     </section>
 
-    <!-- highlights Class -->
-    <section class="highlights">
-      <h2>Highlights from My Learning Journey</h2>
-      <ul>
-        <li>Learning JavaScript: My first steps into a completely new language</li>
-        <li>Using Git Bash to create and structure folders through commands</li>
-        <li>Learning how to navigate GitHub and understand what a repository is</li>
-        <li>Gaining confidence in managing my own projects online</li>
-      </ul>
-    </section>
-  </main>
+    
 
   <footer>
     <p>&copy; 2025 Monique Lotriet</p>
