--- a/projects.html
+++ b/projects.html
@@ -18,12 +18,32 @@
       </ul>
     </nav>
   </header>
+<!--Project Front End Dev Journey-->
+<main>
+  <h1>Projects</h1>
 
-  <main>
-    <h1>Projects</h1>
-    <!-- Projects content -->
-  </main>
+  <!-- Front End Dev Journey Highlights -->
+  <section class="highlights">
+    <h2>Highlights from My Front End Developer Course</h2>
+    <ul>
+      <li>Learning JavaScript: my first steps into a completely new language</li>
+      <li>Using Git Bash to create and structure folders through commands</li>
+      <li>Learning how to navigate GitHub and understand what a repository is</li>
+      <li>Gaining confidence in managing my own projects online</li>
+      <li>Learning how to navigate Vue</li>
+    </ul>
+  </section>
+<!-- Screenshot Step 1 to END-->
+<section class="gallery" >
+    <h2 id="gallerytitle">Screenshots of my PayBuild: Step 1 to End</h2>
+    <p>These screenshots capture my progress building this portfolio step by step.</p>
 
+    <div class="screenshot" id="s1">
+      <img src="assets/img/Day1_HomePage.png" alt="Screenshot 1: HTML build with semantic structure" width="600">
+      <p>Step 1: Initial outline of pages and navigation using only HTML.</p>
+    </div>
+</section>
+</main>
   <footer>
     <p>&copy; 2025 Monique Lotriet</p>
   </footer>
