update: overwrite Projects page with latest changes

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
   </section>
 <!-- Screenshot Step 1 to END-->
 <section class="gallery" >
-    <h2 id="gallerytitle">Screenshots of my PayBuild: Step 1 to End</h2>
+    <h2 id="gallerytitle">Screenshots of my Build: Step 1 to End</h2>
     <p>These screenshots capture my progress building this portfolio step by step.</p>
 
     <div class="screenshot" id="s1">
