feat: add mobile nav toggle and contact form validation (Day 3 interactivity)

--- a/about.html
+++ b/about.html
@@ -14,18 +14,64 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <h1>About Me</h1>
-    <!-- About content-->
-  </main>
+  <section class="about-story">
+    <h2>My Story</h2>
+    <p style="font-size: 14px;padding:10px">
+      I’m a CRM Specialist with expertise in Salesforce Marketing Cloud (SFMC).<br>
+      Recently, I’ve started branching out and upskilling on the technical side.<br>
+      Beginning with front-end development and, over time, aiming to grow into
+      full-stack once I’ve mastered back-end concepts.
+    </p>
+  </section>
 
-  <footer>
-    <p>&copy; 2025 Monique Lotriet</p>
-  </footer>
+  <section class="highlights">
+    <h2>Skills Learnt</h2>
+    <ul style="font-size: 14px;">
+      <li><strong>HTML:</strong> Semantic structure, clear headings, accessible landmarks.</li>
+      <li><strong>CSS:</strong> Mobile-first layouts, Flexbox/Grid, consistent styling.</li>
+      <li><strong>SQL:</strong> Data querying basics applied in CRM contexts.</li>
+      <li><strong>Git Bash & GitHub:</strong> Creating folder structures, committing in
+        logical steps, and managing repositories online.</li>
+    </ul>
+  </section>
+
+  <section class="highlights">
+    <h2>My 3-Month Learning Journey</h2>
+    <ul style="font-size: 14px;">
+      <li><strong>Task 1:</strong> Built my first semantic HTML pages.</li>
+      <li><strong>Task 2:</strong> Applied responsive CSS with Flexbox and Grid.</li>
+      <li><strong>Task 3:</strong> Introduced JavaScript for interactivity and validation.</li>
+      <li><strong>Task 4:</strong> Explored Vue.js, building a multi-route app to understand single-page applications.</li>
+    </ul>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; 2025 Monique Lotriet</p>
+  <section>
+    <h2 id="contactdetails">Contact Details:</h2>
+    <p>If you’d like to connect about front-end development, CRM, or collaborations, you can reach me here:</p>
+
+    <ul class="contactlist">
+      <li class="contactitem">
+        <img  src="assets/img/Email.png" alt="Email icon">
+        <a href="mailto:moniquelotriet@hotmail.co.za">moniquelotriet@hotmail.co.za</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/LinkedIn.png" alt="LinkedIn icon">
+        <a href="https://www.linkedin.com/in/YOUR_HANDLE">linkedin.com/in/YOUR_HANDLE</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/GitHub.png" alt="GitHub icon">
+        <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
