--- a/index.html
+++ b/index.html
@@ -5,30 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Monique Lotriet | Personal Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Karla:wght@400;600&display=swap" rel="stylesheet">
+
   <script src="assets/js/main.js" defer></script>
 </head>
 <body>
   <header>
-    <nav aria-label="Main navigation">
+    <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
 <main>
 <!-- hero Class -->
-<section class="Hero">
+<section class="hero">
 <h1>Monique Lotriet – Front-End Developer in Training</h1>
   <!-- tagline Class -->
-      <p class="HeroOpen">
+      <p class="heroopen">
         CRM Specialist with over 7 years of experience, now moving to the technical side 
         to upskill myself in the front End Development world.
       </p>
-      <p class="HeroIntro">
+      <p class="herointro">
 Over the last three months, I’ve learned a lot, and while I still have far to go, looking at my 
 progress makes me proud. Working on this daily and applying it to my current 
 role.
@@ -37,14 +40,33 @@ role.
       <div class="cta">
         <a href="projects.html" class="btn">View Projects</a>
         <a href="about.html" class="btn">About Me</a>
-        <a href="contact.html" class="btn">Contact Me</a>
       </div>
     </section>
 
     
 
-  <footer>
-    <p>&copy; 2025 Monique Lotriet</p>
-  </footer>
+<footer>
+  <p>&copy; 2025 Monique Lotriet</p>
+  <section>
+    <h2 id="contactdetails">Contact Details:</h2>
+    <p>If you’d like to connect about front-end development, CRM, or collaborations, you can reach me here:</p>
+
+    <ul class="contactlist">
+      <li class="contactitem">
+        <img  src="assets/img/Email.png" alt="Email icon">
+        <a href="mailto:moniquelotriet@hotmail.co.za">moniquelotriet@hotmail.co.za</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/LinkedIn.png" alt="LinkedIn icon">
+        <a href="https://www.linkedin.com/in/YOUR_HANDLE">linkedin.com/in/YOUR_HANDLE</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/GitHub.png" alt="GitHub icon">
+        <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
