--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,6 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -41,11 +40,34 @@
     <div class="screenshot" id="s1">
       <img src="assets/img/Day1_HomePage.png" alt="Screenshot 1: HTML build with semantic structure" width="600">
       <p>Step 1: Initial outline of pages and navigation using only HTML.</p>
+      <img src="assets/img/Day2_CSS.png" alt="Screenshot 2: CSS styling" width="600">
+      <p>Step 2: CSS Styling added</p>
     </div>
 </section>
 </main>
   <footer>
-    <p>&copy; 2025 Monique Lotriet</p>
-  </footer>
+  <p>&copy; 2025 Monique Lotriet</p>
+  <section>
+    <h2 id="contactdetails">Contact Details:</h2>
+    <p>If you’d like to connect about front-end development, CRM, or collaborations, you can reach me here:</p>
+
+    <ul class="contactlist">
+      <li class="contactitem">
+        <img  src="assets/img/Email.png" alt="Email icon">
+        <a href="mailto:moniquelotriet@hotmail.co.za">moniquelotriet@hotmail.co.za</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/LinkedIn.png" alt="LinkedIn icon">
+        <a href="https://www.linkedin.com/in/YOUR_HANDLE">linkedin.com/in/YOUR_HANDLE</a>
+      </li>
+
+      <li class="contactitem">
+        <img src="assets/img/GitHub.png" alt="GitHub icon">
+        <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
+      </li>
+    </ul>
+  </section>
+</footer>
 </body>
 </html>
