Updated CSS styling, modified HTML pages, and added new images (removed contact.html)

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <script src="assets/js/main.js" defer></script>
 </head>
-<body>
+<body><main>
   <header>
     <nav aria-label="Main navigation">
       <ul>
@@ -49,10 +49,8 @@
     </ul>
   </section>
 </main>
+<footer><p>&copy; 2025 Monique Lotriet</p>
 
-<footer>
-  <p>&copy; 2025 Monique Lotriet</p>
-  <section>
     <h2 id="contactdetails">Contact Details:</h2>
     <p>If you’d like to connect about front-end development, CRM, or collaborations, you can reach me here:</p>
 
@@ -71,7 +69,5 @@
         <img src="assets/img/GitHub.png" alt="GitHub icon">
         <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
       </li>
-    </ul>
-  </section>
-</body>
+    </ul></footer></body>
 </html>
