--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ role.
       </div>
     </section>
 
-    
+    </main>
 
 <footer>
   <p>&copy; 2025 Monique Lotriet</p>
@@ -67,6 +67,6 @@ role.
         <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
       </li>
     </ul>
-  </section>
+  </section></footer>
 </body>
 </html>
