--- a/projects.html
+++ b/projects.html
@@ -13,61 +13,68 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a class="active" href="projects.html">Projects</a></li>
       </ul>
     </nav>
   </header>
-<!--Project Front End Dev Journey-->
-<main>
-  <h1>Projects</h1>
 
-  <!-- Front End Dev Journey Highlights -->
-  <section class="highlights">
-    <h2>Highlights from My Front End Developer Course</h2>
-    <ul>
-      <li>Learning JavaScript: my first steps into a completely new language</li>
-      <li>Using Git Bash to create and structure folders through commands</li>
-      <li>Learning how to navigate GitHub and understand what a repository is</li>
-      <li>Gaining confidence in managing my own projects online</li>
-      <li>Learning how to navigate Vue</li>
-    </ul>
-  </section>
-<!-- Screenshot Step 1 to END-->
-<section class="gallery" >
-    <h2 id="gallerytitle">Screenshots of my Build: Step 1 to End</h2>
-    <p>These screenshots capture my progress building this portfolio step by step.</p>
+  <main>
+    <h1>My Projects</h1>
+    <p>Here you’ll find the projects I’ve worked on. Each one shows the process, tools I used, and what I learned.</p>
 
-    <div class="screenshot" id="s1">
-      <img src="assets/img/Day1_HomePage.png" alt="Screenshot 1: HTML build with semantic structure" width="600">
-      <p>Step 1: Initial outline of pages and navigation using only HTML.</p>
-      <img src="assets/img/Day2_CSS.png" alt="Screenshot 2: CSS styling" width="600">
-      <p>Step 2: CSS Styling added</p>
-    </div>
-</section>
-</main>
+    <!-- Project Block -->
+    <section class="project-block">
+      <h2>📂 Portfolio Website (Front-End Dev Course)</h2>
+      <p>This was my first full front-end project where I built my own portfolio website step by step.</p>
+      
+      <ul>
+        <li>Learning JavaScript basics</li>
+        <li>Using Git Bash for folder structure</li>
+        <li>Creating and pushing repositories on GitHub</li>
+        <li>Styling with CSS and practicing responsive layouts</li>
+        <li>Exploring Vue.js fundamentals</li>
+      </ul>
+
+   <div class="textstandard"><p>Step 1: Adding semantic HTML</p>
+  <div class="project-gallery">
+    <img class="project-gallery" src="assets/img/Day1_HomePage.png" alt="HTML build step" width="300">
+    
+  </div>
+<div class="textstandard"><p>Step 2: Adding CSS styling</p></div>
+  <div class="project-gallery">  
+    <img src="assets/img/Day2_CSS.png" alt="CSS Styling step" width="300">
+  
+  </div>
+</div>
+
+      <p>
+        🔗 <a href="https://github.com/MoniqueTech" target="_blank">View on GitHub</a>
+      </p>
+    </section>
+    <!-- /Project Block -->
+
+    <!-- More project blocks can be added below later -->
+  </main>
+
   <footer>
-  <p>&copy; 2025 Monique Lotriet</p>
-  <section>
-    <h2 id="contactdetails">Contact Details:</h2>
-    <p>If you’d like to connect about front-end development, CRM, or collaborations, you can reach me here:</p>
-
-    <ul class="contactlist">
-      <li class="contactitem">
-        <img  src="assets/img/Email.png" alt="Email icon">
-        <a href="mailto:moniquelotriet@hotmail.co.za">moniquelotriet@hotmail.co.za</a>
-      </li>
-
-      <li class="contactitem">
-        <img src="assets/img/LinkedIn.png" alt="LinkedIn icon">
-        <a href="https://www.linkedin.com/in/YOUR_HANDLE">linkedin.com/in/YOUR_HANDLE</a>
-      </li>
-
-      <li class="contactitem">
-        <img src="assets/img/GitHub.png" alt="GitHub icon">
-        <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
-      </li>
-    </ul>
-  </section>
-</footer>
+    <p>&copy; 2025 Monique Lotriet</p>
+    <section>
+      <h2 id="contactdetails">Contact Details:</h2>
+      <ul class="contactlist">
+        <li class="contactitem">
+          <img src="assets/img/Email.png" alt="Email icon">
+          <a href="mailto:moniquelotriet@hotmail.co.za">moniquelotriet@hotmail.co.za</a>
+        </li>
+        <li class="contactitem">
+          <img src="assets/img/LinkedIn.png" alt="LinkedIn icon">
+          <a href="https://www.linkedin.com/in/YOUR_HANDLE">linkedin.com/in/YOUR_HANDLE</a>
+        </li>
+        <li class="contactitem">
+          <img src="assets/img/GitHub.png" alt="GitHub icon">
+          <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
+        </li>
+      </ul>
+    </section>
+  </footer>
 </body>
 </html>
