Update footer include, projects page, README, and add Day3JS screenshot

--- a/assets/footer.html
+++ b/assets/footer.html
@@ -22,7 +22,7 @@
           <a href="https://www.linkedin.com/in/moniquelotriet">linkedin.com/in/moniquelotriet</a>
         </li>
         <li class="contactitem">
-          <img src="assets/img/GitHub.png" alt="GitHub icon">
+          <img src="assets/img/github.png" alt="GitHub icon">
           <a href="https://github.com/MoniqueTech">github.com/MoniqueTech</a>
         </li>
       </ul>
