--- a/projects.html
+++ b/projects.html
@@ -46,10 +46,15 @@
     <img src="assets/img/Day2_CSS.png" alt="CSS Styling step" width="300">
   
   </div>
+  <div class="textstandard"><p>Step 3: Adding JS</p></div>
+  <div class="project-gallery">  
+    <img src="assets/img/Day3JS.png" alt="JS Functions" width="300">
+  
+  </div>
 </div></div>
 
       <p>
-        🔗 <a href="https://github.com/MoniqueTech/PersonalPortfolio" target="_blank">View on GitHub</a>
+        🔗 <a href="https://moniquetech.github.io/PersonalPortfolio/index.html" target="_blank">View online</a>
       </p>
     </section>
     <!-- /Project Block -->
